--- a/index.html
+++ b/index.html
@@ -54,10 +54,22 @@
                 <!--Filter-->
                 <div class="search-category">
 
-                    <div class="campus">
+                    <div class="dropdown">
+                        <div class="select">
+                            <span class="selected p-filter">Campus</span>
+                            <div class="caret"></div>
+                        </div>
+                        <ul class="menu">
+                            <li class="p-filter">Seebladsgade</li>
+                            <li class="p-filter">Niels Bohrs Alle</li>
+                            <li class="active p-filter">Campus</li>
+                        </ul>
+                    </div>
+                    
+                    <!-- <div class="campus">
                         <p>Campus</p>
                         <i class="fa-solid fa-chevron-down"></i>
-                    </div>
+                    </div> -->
 
                     <div class="divider"></div>
 
