--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 </body>
 
 <script src="main.js"></script>
-<script src="search.js"></script>
-<script src="suggestions.js"></script>
+<script src="javsscript/search.js"></script>
+<script src="javsscript/suggestions.js"></script>
 
 </html>
