--- a/profil.html
+++ b/profil.html
@@ -166,7 +166,7 @@
         </div>
     </footer>
 
-    <script src="profil.js"></script>
+    <script src="javsscript/profil.js"></script>
     
 </body>
 </html>
