Moving js files

--- a/index.html
+++ b/index.html
@@ -318,13 +318,8 @@
 </body>
 
 <script src="main.js"></script>
-<<<<<<< Updated upstream
 <script src="javsscript/search.js"></script>
 <script src="javsscript/suggestions.js"></script>
-=======
-<script src="search.js"></script>
-<script src="suggestions.js"></script>
-<script src="popup.js"></script>
->>>>>>> Stashed changes
+<script src="javsscript/popup.js"></script>
 
 </html>
