--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 
 </body>
 
-<script src="main.js"></script>
+<script src="javsscript/main.js"></script>
 <script src="javsscript/search.js"></script>
 <script src="javsscript/suggestions.js"></script>
 <script src="javsscript/popup.js"></script>
