--- a/index.html
+++ b/index.html
@@ -317,9 +317,9 @@
 
 </body>
 
-<script src="javsscript/main.js"></script>
-<script src="javsscript/search.js"></script>
-<script src="javsscript/suggestions.js"></script>
-<script src="javsscript/popup.js"></script>
+<script src="javascript/main.js"></script>
+<script src="javascript/search.js"></script>
+<script src="javascript/suggestions.js"></script>
+<script src="javascript/popup.js"></script>
 
 </html>
