--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <div class="caret"></div>
                         </div>
                         <ul class="menu">
-                            <li class="active p-filter">Kategori</li>
+                            <li class="active p-filter">Alle kategorier</li>
                             <li class="p-filter">Sport</li>
                             <li class="p-filter">Hobby</li>
                             <li class="p-filter">Fest</li>
@@ -102,8 +102,7 @@
                             <div class="caret"></div>
                         </div>
                         <ul class="menu">
-                            <li class="active p-filter">Dato</li>
-                            <li class="p-filter">Nyeste først</li>
+                            <li class="active p-filter">Nyeste først</li>
                             <li class="p-filter">Ældste først</li>
                         </ul>
                     </div>
